# 4-course-rust

lab2/src/: main.rs
lab3/: tasks.txt
lab3/src/: main.rs
lab4/: Cargo.toml
lab4/src/: main.rs
