[package]
name = "lab4"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
uuid = { version = "1.1", features = ["v4"] }
serde_json = "1.0"
tokio-stream = "0.1"
futures-util = "0.3"

